cmake_minimum_required(VERSION 3.0)
project(solver)
file(GLOB CPPS "*.cpp")
include_directories(${CMAKE_SOURCE_DIR}/../formatter_lib ${CMAKE_SOURCE_DIR}/../formatter_ex_lib ${CMAKE_SOURCE_DIR}/../solver_lib)
find_library(LIB_PATH_2 formatter_ex "${CMAKE_SOURCE_DIR}/../formatter_ex_lib/build")
find_library(LIB_PATH_1 formatter "${CMAKE_SOURCE_DIR}/../formatter_lib/build")
find_library(LIB_PATH_3 solver "${CMAKE_SOURCE_DIR}/../solver_lib/build")
add_executable(solver equation.cpp)
target_link_libraries(solver ${LIB_PATH_2} ${LIB_PATH_1} ${LIB_PATH_3} m)